# pharos-sre-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
chart/pharos-sre-bot/: Chart.yaml  values.yaml
chart/pharos-sre-bot/runbooks/: persistentvolume-disk-full.md
chart/pharos-sre-bot/templates/: NOTES.txt  _helpers.tpl  configmap-runbooks.yaml  deployment.yaml  pvc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
runbooks/: crashloopbackoff.md  high-latency-webserver.md
scripts/: grafana-get-tools.py  k8-get-tools.py
src/troubleshooting_agent/: __init__.py  agent.py  api.py  cli.py  config.py  embeddings.py  ingest.py  logging.py  vectorstore.py
src/troubleshooting_agent/tools/: base.py  grafana.py  kubernetes.py  registry.py
